missing an image

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                       
                                       <div class="elementor-widget-wrap">
                                         <div class="elementor-widget-container" style="margin-top: 30px;">
-                                          <img width="900" height="619" src="./files/Millionverse3.png" class="attachment-full size-full" alt="" loading="lazy" >
+                                          <img width="900" height="619" src="./files/millionverse3a.png" class="attachment-full size-full" alt="" loading="lazy" >
                                         </div>
                                       </div>
                                     </div>
