Add contact email

--- a/index.html
+++ b/index.html
@@ -1029,6 +1029,7 @@ The first 1,000 accounts that hold more than 1,000,000 LVJ tokens for more than 
                       <div class="ast-builder-layout-element ast-flex site-footer-focus-item ast-footer-copyright" data-section="section-footer-builder">
                         <div class="ast-footer-copyright">
                           <p style="text-align: center;">Copyright © 2021 Millionverse </p>
+                          <p style="text-align: center;">Business Inquiries: millionverse777@gmail.com</p>
                         </div>
                       </div>
                     </div>
