updated swap address

--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                     </div>
                     <div class="ast-builder-layout-element ast-flex site-header-focus-item ast-header-button-1" data-section="section-hb-button-1">
                       <div class="ast-builder-button-wrap ast-builder-button-size-">
-                        <a class="ast-custom-button-link" href="https://app.uniswap.org/#/swap?inputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank">
+                        <a class="ast-custom-button-link" href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank">
                           <div class="ast-custom-button">Buy Juice</div>
                         </a>
-                        <a class="menu-link" href="https://app.uniswap.org/#/swap?inputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank">Lionverse App</a>
+                        <a class="menu-link" href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank">Lionverse App</a>
                       </div>
                     </div>
                   </div>
@@ -258,7 +258,7 @@
                                         <div class="elementor-element elementor-element-ea021c0 elementor-mobile-align-center elementor-widget__width-auto elementor-widget elementor-widget-button" data-id="ea021c0" data-element_type="widget" data-widget_type="button.default">
                                           <div class="elementor-widget-container">
                                             <div class="elementor-button-wrapper">
-                                              <a href="https://app.uniswap.org/#/swap?inputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+                                              <a href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
                                                 <span class="elementor-button-content-wrapper">
                                                   <span class="elementor-button-icon elementor-align-icon-right">
                                                     <i aria-hidden="true" class="fas fa-coins">
@@ -353,7 +353,7 @@
                                           <div class="elementor-element elementor-element-d8ccd10 elementor-mobile-align-center elementor-widget elementor-widget-button" data-id="d8ccd10" data-element_type="widget" data-widget_type="button.default">
                                             <div class="elementor-widget-container">
                                               <div class="elementor-button-wrapper">
-                                                <a href="https://app.uniswap.org/#/swap?inputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+                                                <a href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
                                                   <span class="elementor-button-content-wrapper">
                                                     <span class="elementor-button-icon elementor-align-icon-right">
                                                       <i aria-hidden="true" class="fas fa-coins">
@@ -796,7 +796,7 @@ The first 1,000 accounts that hold more than 1,000,000 LVJ tokens for more than 
                                           <div id="pp-accordion-tab-content-9661" class="pp-accordion-tab-content" data-tab="1" role="tabpanel" aria-labelledby="pp-accordion-tab-title-9661">
                                             <p>You can exchange both LVJ tokens and MM tokens on Ethereum Mainnet Chain.<br> </p>
                                             <p>To exchange for Million tokens (MM), you can go through <a class="main-color" href="https://app.uniswap.org/#/swap?inputCurrency=0x6b4c7a5e3f0b99fcd83e9c089bddd6c7fce5c611" target="_blank" rel="noopener">Uniswap.org MM Exchange </a>.</p>
-                                            <p>To exchange for Lionverse Juice tokens (LVJ), you can go through <a class="main-color" href="https://app.uniswap.org/#/swap?inputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank" rel="noopener">Uniswap.org LVJ Exchange </a>.</p>
+                                            <p>To exchange for Lionverse Juice tokens (LVJ), you can go through <a class="main-color" href="https://app.uniswap.org/#/swap?inputCurrency=ETH&outputCurrency=0x87cdbe3c31f2a9e1c506dc2f827a02472a0660ce&use=V2" target="_blank" rel="noopener">Uniswap.org LVJ Exchange </a>.</p>
                                             <p>
                                               <br>
                                             </p>
