--- a/index.cn.html
+++ b/index.cn.html
@@ -114,6 +114,9 @@
                                 <li id="menu-item-716" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-716">
                                   <a href="https://millionverse.live/#faq" class="menu-link">常见问题</a>
                                 </li>
+                                <li id="menu-item-716" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-716">
+                                  <a href="https://polygon-faucet.millionverse.live" class="menu-link">Polygon水龙头</a>
+                                </li>
                               </ul>
                             </div>
                           </nav>
@@ -204,6 +207,9 @@
                           </li>
                           <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-716">
                             <a href="https://millionverse.live/#faq" class="menu-link">常见问题</a>
+                          </li>
+                          <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-716">
+                            <a href="https://polygon-faucet.millionverse.live" class="menu-link">Polygon水龙头</a>
                           </li>
                           <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-716">
                             <a href="index.html" class="menu-link">EN</a>
