--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             <a href="https://polygon-faucet.millionverse.live" class="menu-link">Polygon Faucet</a>
                           </li>
                           <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-716">
-                            <a href="index.html" class="menu-link">中文</a>
+                            <a href="index.cn.html" class="menu-link">中文</a>
                           </li>
                         </ul>
                       </div>
